# de-lio

./: CMakeLists.txt  Readme.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: Filter.cpp  Filter.h  LFO.cpp  LFO.h  Panning.cpp  Panning.h  Reverb.cpp  Reverb.h  Tremolo.cpp  Tremolo.h  Volume.cpp  Volume.h
src/gui/: KnobLookAndFeel.cpp  KnobLookAndFeel.h  SwitchLookAndFeel.cpp  SwitchLookAndFeel.h
